Fix DecisionServiceNodeSvg to have readonly divider line and dragging nodes from Palette on Firefox

--- a/packages/dmn-editor/src/DmnEditor.css
+++ b/packages/dmn-editor/src/DmnEditor.css
@@ -87,7 +87,7 @@
   /* stroke: purple;
   opacity: 0.2; */
 }
-.kie-dmn-editor--node-decisionService-interactionDividerLine:hover {
+.kie-dmn-editor--node-decisionService-interactionDividerLine:not(.readonly):hover {
   cursor: row-resize;
 }
 
@@ -201,6 +201,7 @@
 
 .kie-dmn-editor--palette-button {
   margin: 0;
+  margin-bottom: 8px;
   padding: 0;
   width: 40px;
   height: 40px;
